<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchItemBTN"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/ic_search"/>

    <item
        android:id="@+id/itemSortBTN"
        android:title="@string/sort"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_sort"/>

    <item
        android:id="@+id/newItemBTN"
        android:title="@string/new_item"
        android:icon="@drawable/ic_new_item"/>

    <item
        android:id="@+id/detailSearchBTN"
        android:title="@string/detail_search"
        android:icon="@drawable/ic_search"/>

</menu>